2008-02-28 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_GedcomParse.py minor: remove redundant
	counting of errors dating to r8912 patch, I think. I don't believe
	this actually affects anything, but it is "clearly" an oversight

2008-02-29  Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: find_family_from_handle returns tuple
	* src/Editors/_EditPerson.py: don't use find_person but get_person

2008-02-29 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/Makefile.am: add CmdRef.py and DateParserDisplayTest.py to
    get make distcheck to run through.

2008-02-28 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_GedcomParse.py fix oversight from r10099
	where eprefix was changed to event_prefix in gen/db/base.py
	(problem detected with unittest gramps_cli_test.py .. yay!)
	* src/gen/utils/test/callback_test.py fix unittest that had
	assumed the existence of a global that need not exist

2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/PersonView.py: don't crash on click, 1794
	* src/PageView.py: don't crash on click, #1794

2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: allow for info dialog after import
	* src/gen/db/base.py: find returns if new object or not
	* src/gen/db/dbdir.py: find returns if new object or not
	* src/plugins/ImportGeneWeb.py: allow multiple mime types
	* src/plugins/ImportvCard.py: allow multiple mime types
	* src/plugins/ReadGrdb.py: allow multiple mime types
	* src/plugins/ReadPkg.py: allow multiple mime types
	* src/plugins/ImportCSV.py: allow multiple mime types
	* src/DbManager.py: use family tree string, not database
	* src/glade/gramps.glade: add info dialog
	* src/QuestionDialog.py: add info dialog, clean up set transient errors
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: improve comment
	* src/GrampsDbUtils/_ReadXML.py: fix change dates problems, fix 